--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -3165,11 +3165,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rjU7mEz9Z5lE",
-        "outputId": "795d7a85-286c-4505-fdb6-be9b003abf41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rjU7mEz9Z5lE",
+        "outputId": "795d7a85-286c-4505-fdb6-be9b003abf41"
       },
       "source": [
         "# load saved model\n",
@@ -3233,12 +3233,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mzz1Dv-NfyZ2",
-        "outputId": "2020ffd5-cc85-48dc-e276-c8f01e96ae6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
-        }
+        },
+        "id": "mzz1Dv-NfyZ2",
+        "outputId": "2020ffd5-cc85-48dc-e276-c8f01e96ae6d"
       },
       "source": [
         "# plot noisy test accuracy for different noise values\n",
@@ -3279,6 +3279,442 @@
       "source": [
         "It seems like noise of $0.005 * \\mathcal{N}(0,1)$ has no difference on the accuracy. The reason for the good performence of the model could be because I trained the model on data with gaussian noise. In the training process I transform approximatlly half of the data to data with guassian noise with a factor $a=1$ which is almost three orders of magnitude larger than $a=0.005$. In the plot above we can see that for noise factor larger than $a=1$ the performence of the model drop rapidly which supports my explanation."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e2nMlf4IjuqD"
+      },
+      "source": [
+        "5. I just saw that the main goal was to first train the model without augmentation and then check the accuracy over a noisy dataset while later train over noisy training set and compare the accuarcy in both cases. So now I will train the model again over clean dataset (without noise) and compare the results."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uhZYjEVckhWQ"
+      },
+      "source": [
+        "################################################################################\n",
+        "#        USEFUL DATA TRANSFORMS, DOWNLOAD and DATALOADER FUNCTIONS             #     \n",
+        "################################################################################\n",
+        "\n",
+        "class AddGaussianNoise(object):\n",
+        "    \"\"\"Add Gaussian noise to Pytorch's tensor\"\"\"\n",
+        "    def __init__(self, mean=0., std=1., p=0.5):\n",
+        "        self.mean = mean\n",
+        "        self.std = std\n",
+        "        self.p = p\n",
+        "\n",
+        "    def __call__(self, tensor):\n",
+        "      if torch.rand(1).item() <= self.p:\n",
+        "        return tensor + torch.randn(tensor.size()) * self.std + self.mean\n",
+        "      else:\n",
+        "        return tensor\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return self.__class__.__name__ + f'mean={self.mean}, std={self.std}'\n",
+        "\n",
+        "\n",
+        "def get_data_transform():\n",
+        "    \"\"\"Define the data augmentation to apply on the train, validation and test\"\"\"\n",
+        "    normalize_image = transforms.Normalize((0.4914, 0.4822, 0.4465), \n",
+        "                                           (0.2023, 0.1994, 0.2010))\n",
+        "    train_transform = transforms.Compose([\n",
+        "        #transforms.RandomAffine(degrees=10),\n",
+        "        #transforms.ColorJitter(brightness=0.1, contrast=0.1),\n",
+        "        #transforms.RandomHorizontalFlip(p=0.5),\n",
+        "        transforms.ToTensor(),\n",
+        "        normalize_image,\n",
+        "        #AddGaussianNoise(0., 0.2, p=0.5),\n",
+        "    ])\n",
+        "\n",
+        "    valid_transform = transforms.Compose([\n",
+        "        transforms.ToTensor(),\n",
+        "        normalize_image,\n",
+        "    ])\n",
+        "\n",
+        "    test_transform = transforms.Compose([\n",
+        "        transforms.ToTensor(),\n",
+        "        normalize_image,\n",
+        "    ])\n",
+        "\n",
+        "    return train_transform, valid_transform, test_transform\n",
+        "\n",
+        "\n",
+        "def get_dataset(train_transform, valid_transform, test_transform, data_dir):\n",
+        "    \"\"\"Get the datasets for train, validation and test\"\"\"\n",
+        "    train_dataset = torchvision.datasets.SVHN(\n",
+        "        root=data_dir, split='train', transform=train_transform, download=True\n",
+        "    )\n",
+        "    valid_dataset = torchvision.datasets.SVHN(\n",
+        "        root=data_dir, split='train', transform=valid_transform, download=True\n",
+        "    )\n",
+        "    test_dataset  = torchvision.datasets.SVHN(\n",
+        "        root=data_dir, split='test', transform=test_transform, download=True\n",
+        "    )\n",
+        "\n",
+        "    return train_dataset, valid_dataset, test_dataset    \n",
+        "\n",
+        "\n",
+        "def get_data_loader(batch_size, valid_size=0.2, data_dir=SVHN_DATASET_DIR):\n",
+        "    \"\"\"Get the train, validation and test data loaders\"\"\"\n",
+        "\n",
+        "    error_msg = \"[!] valid_size should be in the range [0, 1].\"\n",
+        "    assert ((valid_size >= 0) and (valid_size <= 1)), error_msg\n",
+        "\n",
+        "    # get transform\n",
+        "    train_transform, valid_transform, test_transform = get_data_transform()\n",
+        "\n",
+        "    # load dataset\n",
+        "    train_dataset, valid_dataset, test_dataset = get_dataset(\n",
+        "        train_transform, valid_transform, test_transform, data_dir\n",
+        "    )\n",
+        "    \n",
+        "    # split the data\n",
+        "    num_train = len(train_dataset)\n",
+        "    indices = list(range(num_train))\n",
+        "    np.random.shuffle(indices)\n",
+        "    split = int(np.floor(valid_size * num_train))\n",
+        "    train_idx, valid_idx = indices[split:], indices[:split]\n",
+        "\n",
+        "    # shuffle\n",
+        "    train_sampler = SubsetRandomSampler(train_idx)\n",
+        "    valid_sampler = SubsetRandomSampler(valid_idx)\n",
+        "\n",
+        "    loader_settings = {\n",
+        "        'batch_size': batch_size,\n",
+        "        'num_workers': 1,\n",
+        "        'pin_memory': torch.cuda.is_available()\n",
+        "    }\n",
+        "\n",
+        "    # get dataloader objects\n",
+        "    train_loader = DataLoader(\n",
+        "        train_dataset, sampler=train_sampler, **loader_settings\n",
+        "    )\n",
+        "    valid_loader = DataLoader(\n",
+        "        valid_dataset, sampler=valid_sampler, **loader_settings\n",
+        "    )\n",
+        "    test_loader = DataLoader(\n",
+        "        test_dataset, shuffle=False, **loader_settings\n",
+        "    )\n",
+        "\n",
+        "    return train_loader, valid_loader, test_loader"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZqzuxO9Fk4Go"
+      },
+      "source": [
+        "# loading some data\n",
+        "train_transform, _, _ = get_data_transform()\n",
+        "train_set = torchvision.datasets.SVHN(SVHN_DATASET_DIR, \n",
+        "                                      split='train', \n",
+        "                                      transform=train_transform, \n",
+        "                                      target_transform=None, \n",
+        "                                      download=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V9xAgu5Mk4K6"
+      },
+      "source": [
+        "# let's see some of the images\n",
+        "def convert_to_imshow_format(image):\n",
+        "    # first convert back to [0,1] range from [-1,1] range - approximately...\n",
+        "    image = image / 2 + 0.5\n",
+        "    image = image.numpy()\n",
+        "    \n",
+        "    # for single channel images \n",
+        "    if image.shape[0] == 1:\n",
+        "      return np.squeeze(image)\n",
+        "    \n",
+        "    # for images with more than 1 channel\n",
+        "    elif image.shape[0] > 1:\n",
+        "      return image.transpose(1, 2, 0)\n",
+        "\n",
+        "def grid_plot(images, labels, ncols=5):\n",
+        "  # plot a grid of images of shape (len(images) / ncols, ncols)\n",
+        "  nrows = np.int(np.ceil(len(labels) / ncols))\n",
+        "\n",
+        "  # plot images with labels\n",
+        "  fig, axes = plt.subplots(nrows=nrows, ncols=ncols, figsize=(2 * ncols, 2 * nrows))\n",
+        "  for idx, image in enumerate(images):\n",
+        "    if len(axes.shape) == 1:\n",
+        "      axes[idx].imshow(convert_to_imshow_format(image))\n",
+        "      axes[idx].set_title(CLASSES[labels[idx].item()])\n",
+        "      axes[idx].set_xticks([])\n",
+        "      axes[idx].set_yticks([])\n",
+        "    else:  \n",
+        "      i, j = np.unravel_index(idx, (nrows, ncols))\n",
+        "      axes[i, j].imshow(convert_to_imshow_format(image))\n",
+        "      axes[i, j].set_title(CLASSES[labels[idx].item()])\n",
+        "      axes[i, j].set_xticks([])\n",
+        "      axes[i, j].set_yticks([])\n",
+        "\n",
+        "trainloader = DataLoader(train_set, batch_size=20, shuffle=False)\n",
+        "dataiter = iter(trainloader)\n",
+        "images, labels = dataiter.next()\n",
+        "grid_plot(images, labels)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yjmUUh4Ik4Ne"
+      },
+      "source": [
+        "# define hyper-parmeters\n",
+        "batch_size = 32\n",
+        "learning_rate = 0.00005\n",
+        "num_epochs = 10\n",
+        "whight_decay = learning_rate/110\n",
+        "\n",
+        "# Load the dataset\n",
+        "train_loader, valid_loader, test_loader = get_data_loader(batch_size, \n",
+        "                                                          valid_size=0.2, \n",
+        "                                                          )\n",
+        "# device\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# loss criterion\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# model\n",
+        "model = SVHN_CNN().to(device)\n",
+        "\n",
+        "# optimizer\n",
+        "optimizer = torch.optim.Adam(model.parameters(), \n",
+        "                             lr=learning_rate, \n",
+        "                             amsgrad=True, \n",
+        "                             weight_decay=whight_decay)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fMC3qd93k4QA"
+      },
+      "source": [
+        "# dict for saving logs \n",
+        "logger = {\n",
+        "    'loss': [],\n",
+        "    'train_acc': [],\n",
+        "    'valid_acc': [],\n",
+        "    'epochs': [],\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "naUpgNJvk4Sj"
+      },
+      "source": [
+        "# training loop\n",
+        "for epoch in range(1, num_epochs + 1):\n",
+        "    model.train() # put in training mode\n",
+        "    running_loss = 0.0\n",
+        "    epoch_time = time.time()\n",
+        "    for i, data in enumerate(train_loader, 0):\n",
+        "        # get the inputs\n",
+        "        inputs, labels = data\n",
+        "        \n",
+        "        # send them to device\n",
+        "        inputs = inputs.to(device)\n",
+        "        labels = labels.to(device)\n",
+        "        \n",
+        "        # forward + backward + optimize\n",
+        "        outputs = model(inputs)           # forward pass\n",
+        "        loss = criterion(outputs, labels) # calculate the loss\n",
+        "        optimizer.zero_grad()             # zero the parameter gradients\n",
+        "        loss.backward()                   # backpropagation\n",
+        "        optimizer.step()                  # update parameters\n",
+        "        \n",
+        "        # calculate loss\n",
+        "        running_loss += loss.data.item()\n",
+        "        running_loss /= len(trainloader)\n",
+        "        \n",
+        "    # Calculate training + valid sets accuracy\n",
+        "    train_accuracy, _ = calculate_accuracy(model, train_loader, device)\n",
+        "    valid_accuracy, _ = calculate_accuracy(model, valid_loader, device)\n",
+        "    log = \"Epoch: {} | Loss: {:.6f} | Training accuracy: {:.3f}% | valid accuracy: {:.3f}% | \".format(epoch\n",
+        "    , running_loss, train_accuracy, valid_accuracy)\n",
+        "    epoch_time = time.time() - epoch_time\n",
+        "    log += \"Epoch Time: {:.2f} secs\".format(epoch_time)\n",
+        "    print(log)\n",
+        "    \n",
+        "    # save log into logger\n",
+        "    logger['loss'].append(running_loss)\n",
+        "    logger['train_acc'].append(train_accuracy)\n",
+        "    logger['valid_acc'].append(valid_accuracy)\n",
+        "    logger['epochs'].append(epoch)\n",
+        "\n",
+        "    # save the model\n",
+        "    state = {\n",
+        "        'net':        model.state_dict(),\n",
+        "        'epoch':      epoch,\n",
+        "        'loss':       loss,\n",
+        "        'train_acc':  train_accuracy,\n",
+        "        'valid_acc':  valid_accuracy,\n",
+        "        'logger':     logger,\n",
+        "    }\n",
+        "    torch.save(state, f'{SVHN_CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
+        "print('==> Finished Training ...')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PR6y-4Ofk4VD"
+      },
+      "source": [
+        "# load saved model\n",
+        "model = SVHN_CNN().to(device)\n",
+        "state = torch.load(f'{SVHN_CHECKPOINT_DIR}/{MODEL_NAME}_{num_epochs - 1}.pth', map_location=device)\n",
+        "model.load_state_dict(state['net'])\n",
+        "\n",
+        "# calculte test accuracy\n",
+        "test_accuracy, confusion_matrix = calculate_accuracy(model, test_loader, device)\n",
+        "print()\n",
+        "print('Test accuracy: {}'.format(test_accuracy))\n",
+        "\n",
+        "\n",
+        "# plot confusion matrix\n",
+        "fig, ax = plt.subplots(1,1,figsize=(8, 8))\n",
+        "ax.matshow(confusion_matrix, aspect='auto', vmin=0, vmax=1000, cmap=plt.get_cmap('Blues'))\n",
+        "plt.ylabel('Actual Category')\n",
+        "plt.yticks(range(10), CLASSES.values())\n",
+        "plt.xlabel('Predicted Category')\n",
+        "plt.xticks(range(10), CLASSES.values())\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KmsnXUtik4Xc"
+      },
+      "source": [
+        "print_msg_box('Test accuracy: ' + str(np.round(test_accuracy, 2)) + '%')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0YXZT1Hkk4aL"
+      },
+      "source": [
+        "fig, ax = plt.subplots(1, 1, figsize=(12,6))\n",
+        "fig.patch.set_facecolor('white')\n",
+        "\n",
+        "# plot accuracy\n",
+        "p1 = ax.plot(logger['epochs'], logger['train_acc'], linewidth=2, label='train\\naccuracy')\n",
+        "p2 = ax.plot(logger['epochs'], logger['valid_acc'], linewidth=2, label='validation\\naccuracy')\n",
+        "ax.set_xticks(range(0, num_epochs + 1, 1))\n",
+        "ax.set_xticklabels(range(0, num_epochs + 1, 1))\n",
+        "ax.set_xlabel('Epoch')\n",
+        "ax.set_ylabel('Accuracy [%]')\n",
+        "ax.set_title('Model Accuracy and Loss')\n",
+        "ax.xaxis.grid()\n",
+        "ax1 = ax.twinx()\n",
+        "ax1.set_ylabel('Loss')\n",
+        "p3 = ax1.plot(logger['epochs'], logger['loss'], linewidth=2, label='loss')\n",
+        "\n",
+        "# Add legend\n",
+        "lns = p1 + p2 + p3\n",
+        "labs = [l.get_label() for l in lns]\n",
+        "ax.legend(lns, labs, loc='upper center', ncol=3, frameon=False, bbox_to_anchor=(0.35, 1.0))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7XhyDXp_k4cl"
+      },
+      "source": [
+        "class AddGaussianNoise(object):\n",
+        "    \"\"\"Add Gaussian noise to Pytorch's tensor\"\"\"\n",
+        "    def __init__(self, mean=0., std=1., a=0.005):\n",
+        "        self.mean = mean\n",
+        "        self.std = std\n",
+        "        self.a = a\n",
+        "\n",
+        "    def __call__(self, tensor):\n",
+        "        return tensor + self.a * torch.randn(tensor.size()) * self.std + self.mean\n",
+        "      \n",
+        "    def __repr__(self):\n",
+        "        return self.__class__.__name__ + f'mean={self.mean}, std={self.std}'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4ks2HY2Xk4fD"
+      },
+      "source": [
+        "# plot noisy test accuracy for different noise values\n",
+        "fig, ax = plt.subplots(1, 1, figsize=(12,6))\n",
+        "fig.patch.set_facecolor('white')\n",
+        "p1 = ax.semilogx(a_list, noisy_test_accuracy, linewidth=2, label='noisy test accuracy')\n",
+        "ax.set_xticks(a_list)\n",
+        "ax.set_xticklabels(a_list)\n",
+        "ax.set_xlabel('Noise factor')\n",
+        "ax.set_ylabel('Accuracy [%]')\n",
+        "ax.set_title('Model Accuracy over noisy test dataset: image + a * N(0, 1)')\n",
+        "ax.scatter(a_list[2], noisy_test_accuracy[2], color='red', label='$a=0.005$')\n",
+        "ax.text(a_list[2], noisy_test_accuracy[2] - 5, 'acc = ' + str(np.round(noisy_test_accuracy[2], 2)) + '%')\n",
+        "ax.legend()\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCQMikMDlms9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1rYW-Ar0lmxg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
