in process of solving the weight initialization question

--- a/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
+++ b/Hw2/ee046211_hw2_mlp_cnn_students_solution.ipynb
@@ -22,8 +22,7 @@
     "colab": {
       "name": "ee046211_hw2_mlp_cnn_students_solution.ipynb",
       "provenance": []
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -1226,7 +1225,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d385c889-7d47-41ae-ef45-c80447d497b1"
+        "outputId": "f726bdeb-5167-4b5d-f5d3-8f145d19dbe4"
       },
       "source": [
         "!pip install torchviz\n",
@@ -1260,11 +1259,11 @@
             "  Downloading https://files.pythonhosted.org/packages/79/e7/643808913211d6c1fc96a3a4333bf4c9276858fab00bcafaf98ea58a97be/torchviz-0.0.2.tar.gz\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.7/dist-packages (from torchviz) (1.8.1+cu101)\n",
             "Requirement already satisfied: graphviz in /usr/local/lib/python3.7/dist-packages (from torchviz) (0.10.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from torch->torchviz) (1.19.5)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch->torchviz) (3.7.4.3)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from torch->torchviz) (1.19.5)\n",
             "Building wheels for collected packages: torchviz\n",
             "  Building wheel for torchviz (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for torchviz: filename=torchviz-0.0.2-cp37-none-any.whl size=4152 sha256=1883b51d89ed3810a0928e4097b47af2616bca40dfdc47da371c0c0a31cd8e68\n",
+            "  Created wheel for torchviz: filename=torchviz-0.0.2-cp37-none-any.whl size=4152 sha256=a7d74ff9695a4a7e42b568cc7b612af37b7d790d826537992dbb4e5c1e1b737b\n",
             "  Stored in directory: /root/.cache/pip/wheels/01/26/58/026ffd533dbe8b3972eb423da9c7949beca68d1c98ed9e8624\n",
             "Successfully built torchviz\n",
             "Installing collected packages: torchviz\n",
@@ -1276,7 +1275,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7f948c594930>"
+              "<torch._C.Generator at 0x7f7e7bb5c230>"
             ]
           },
           "metadata": {
@@ -1309,20 +1308,102 @@
       "metadata": {
         "scrolled": true,
         "id": "YafBVOoGJ4Pl",
-        "outputId": "13b504c8-c416-4e14-a982-f9ac4961ab2a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23a549fc-6853-454c-fc80-581b2dfdc8e5"
       },
       "source": [
         "x = torch.randn(512)\n",
         "for i in range(100):\n",
         "    a = torch.randn(512, 512)\n",
         "    x = a @ x\n",
+        "    # added code for visualizing the blow up effect\n",
+        "    if i == 26:\n",
+        "      print('At layer num {}, mean(x) = {}, std(x) = {}'.format(i, x.mean(), x.std()))\n",
+        "    if torch.isnan(x.mean()) or torch.isnan(x.std()):\n",
+        "      print('At layer num {}, mean(x) = {}, std(x) = {}'.format(i, x.mean(), x.std()))\n",
         "print(x.mean(), x.std())"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "At layer num 26, mean(x) = 2.154246816520697e+35, std(x) = 4.117393799721901e+36\n",
+            "At layer num 27, mean(x) = nan, std(x) = nan\n",
+            "At layer num 28, mean(x) = nan, std(x) = nan\n",
+            "At layer num 29, mean(x) = nan, std(x) = nan\n",
+            "At layer num 30, mean(x) = nan, std(x) = nan\n",
+            "At layer num 31, mean(x) = nan, std(x) = nan\n",
+            "At layer num 32, mean(x) = nan, std(x) = nan\n",
+            "At layer num 33, mean(x) = nan, std(x) = nan\n",
+            "At layer num 34, mean(x) = nan, std(x) = nan\n",
+            "At layer num 35, mean(x) = nan, std(x) = nan\n",
+            "At layer num 36, mean(x) = nan, std(x) = nan\n",
+            "At layer num 37, mean(x) = nan, std(x) = nan\n",
+            "At layer num 38, mean(x) = nan, std(x) = nan\n",
+            "At layer num 39, mean(x) = nan, std(x) = nan\n",
+            "At layer num 40, mean(x) = nan, std(x) = nan\n",
+            "At layer num 41, mean(x) = nan, std(x) = nan\n",
+            "At layer num 42, mean(x) = nan, std(x) = nan\n",
+            "At layer num 43, mean(x) = nan, std(x) = nan\n",
+            "At layer num 44, mean(x) = nan, std(x) = nan\n",
+            "At layer num 45, mean(x) = nan, std(x) = nan\n",
+            "At layer num 46, mean(x) = nan, std(x) = nan\n",
+            "At layer num 47, mean(x) = nan, std(x) = nan\n",
+            "At layer num 48, mean(x) = nan, std(x) = nan\n",
+            "At layer num 49, mean(x) = nan, std(x) = nan\n",
+            "At layer num 50, mean(x) = nan, std(x) = nan\n",
+            "At layer num 51, mean(x) = nan, std(x) = nan\n",
+            "At layer num 52, mean(x) = nan, std(x) = nan\n",
+            "At layer num 53, mean(x) = nan, std(x) = nan\n",
+            "At layer num 54, mean(x) = nan, std(x) = nan\n",
+            "At layer num 55, mean(x) = nan, std(x) = nan\n",
+            "At layer num 56, mean(x) = nan, std(x) = nan\n",
+            "At layer num 57, mean(x) = nan, std(x) = nan\n",
+            "At layer num 58, mean(x) = nan, std(x) = nan\n",
+            "At layer num 59, mean(x) = nan, std(x) = nan\n",
+            "At layer num 60, mean(x) = nan, std(x) = nan\n",
+            "At layer num 61, mean(x) = nan, std(x) = nan\n",
+            "At layer num 62, mean(x) = nan, std(x) = nan\n",
+            "At layer num 63, mean(x) = nan, std(x) = nan\n",
+            "At layer num 64, mean(x) = nan, std(x) = nan\n",
+            "At layer num 65, mean(x) = nan, std(x) = nan\n",
+            "At layer num 66, mean(x) = nan, std(x) = nan\n",
+            "At layer num 67, mean(x) = nan, std(x) = nan\n",
+            "At layer num 68, mean(x) = nan, std(x) = nan\n",
+            "At layer num 69, mean(x) = nan, std(x) = nan\n",
+            "At layer num 70, mean(x) = nan, std(x) = nan\n",
+            "At layer num 71, mean(x) = nan, std(x) = nan\n",
+            "At layer num 72, mean(x) = nan, std(x) = nan\n",
+            "At layer num 73, mean(x) = nan, std(x) = nan\n",
+            "At layer num 74, mean(x) = nan, std(x) = nan\n",
+            "At layer num 75, mean(x) = nan, std(x) = nan\n",
+            "At layer num 76, mean(x) = nan, std(x) = nan\n",
+            "At layer num 77, mean(x) = nan, std(x) = nan\n",
+            "At layer num 78, mean(x) = nan, std(x) = nan\n",
+            "At layer num 79, mean(x) = nan, std(x) = nan\n",
+            "At layer num 80, mean(x) = nan, std(x) = nan\n",
+            "At layer num 81, mean(x) = nan, std(x) = nan\n",
+            "At layer num 82, mean(x) = nan, std(x) = nan\n",
+            "At layer num 83, mean(x) = nan, std(x) = nan\n",
+            "At layer num 84, mean(x) = nan, std(x) = nan\n",
+            "At layer num 85, mean(x) = nan, std(x) = nan\n",
+            "At layer num 86, mean(x) = nan, std(x) = nan\n",
+            "At layer num 87, mean(x) = nan, std(x) = nan\n",
+            "At layer num 88, mean(x) = nan, std(x) = nan\n",
+            "At layer num 89, mean(x) = nan, std(x) = nan\n",
+            "At layer num 90, mean(x) = nan, std(x) = nan\n",
+            "At layer num 91, mean(x) = nan, std(x) = nan\n",
+            "At layer num 92, mean(x) = nan, std(x) = nan\n",
+            "At layer num 93, mean(x) = nan, std(x) = nan\n",
+            "At layer num 94, mean(x) = nan, std(x) = nan\n",
+            "At layer num 95, mean(x) = nan, std(x) = nan\n",
+            "At layer num 96, mean(x) = nan, std(x) = nan\n",
+            "At layer num 97, mean(x) = nan, std(x) = nan\n",
+            "At layer num 98, mean(x) = nan, std(x) = nan\n",
+            "At layer num 99, mean(x) = nan, std(x) = nan\n",
             "tensor(nan) tensor(nan)\n"
           ],
           "name": "stdout"
@@ -1335,7 +1416,7 @@
         "id": "QHt8z1iNJ4Pm"
       },
       "source": [
-        "Your answers here"
+        "1. We see that if we initialize the weights using a unit normal distribution, the forward pass blows up very early in the process. In the case here, it happens at layer 27, where both the mean and std of x are nans."
       ]
     },
     {
@@ -2287,7 +2368,7 @@
         "np.random.seed(seed)\n",
         "torch.manual_seed(seed)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2340,7 +2421,7 @@
         "if not os.path.isdir(SVHN_CHECKPOINT_DIR):\n",
         "    os.mkdir(SVHN_CHECKPOINT_DIR)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2455,7 +2536,7 @@
         "\n",
         "    return train_loader, valid_loader, test_loader"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2476,7 +2557,7 @@
         "                                      target_transform=None, \n",
         "                                      download=True)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2545,7 +2626,7 @@
         "images, labels = dataiter.next()\n",
         "grid_plot(images, labels)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2654,7 +2735,7 @@
         "\n",
         "        return x"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2669,7 +2750,7 @@
       "source": [
         "print(SVHN_CNN())"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2816,7 +2897,7 @@
         "                             amsgrad=True, \n",
         "                             weight_decay=whight_decay)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2856,7 +2937,7 @@
         "    model_accuracy = total_correct / total_images * 100\n",
         "    return model_accuracy, confusion_matrix"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2873,7 +2954,7 @@
         "    'epochs': [],\n",
         "}"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2937,7 +3018,7 @@
         "    torch.save(state, f'{SVHN_CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
         "print('==> Finished Training ...')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2989,7 +3070,7 @@
         "plt.xticks(range(10), CLASSES.values())\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3033,7 +3114,7 @@
         "    box += f'╚{\"═\" * (width + indent * 2)}╝'  # lower_border\n",
         "    print(box)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3048,7 +3129,7 @@
       "source": [
         "print_msg_box('Test accuracy: ' + str(np.round(test_accuracy, 2)) + '%')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3093,7 +3174,7 @@
         "labs = [l.get_label() for l in lns]\n",
         "ax.legend(lns, labs, loc='upper center', ncol=3, frameon=False, bbox_to_anchor=(0.35, 1.0))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3159,7 +3240,7 @@
         "    def __repr__(self):\n",
         "        return self.__class__.__name__ + f'mean={self.mean}, std={self.std}'"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3208,7 +3289,7 @@
         "  test_accuracy, _ = calculate_accuracy(model, test_loader, device)\n",
         "  noisy_test_accuracy.append(test_accuracy)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3255,7 +3336,7 @@
         "ax.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3401,7 +3482,7 @@
         "\n",
         "    return train_loader, valid_loader, test_loader"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3422,7 +3503,7 @@
         "                                      target_transform=None, \n",
         "                                      download=True)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3482,7 +3563,7 @@
         "images, labels = dataiter.next()\n",
         "grid_plot(images, labels)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3559,7 +3640,7 @@
         "                             amsgrad=True, \n",
         "                             weight_decay=whight_decay)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3586,7 +3667,7 @@
         "    'epochs': [],\n",
         "}"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3650,7 +3731,7 @@
         "    torch.save(state, f'{SVHN_CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
         "print('==> Finished Training ...')"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3702,7 +3783,7 @@
         "plt.xticks(range(10), CLASSES.values())\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3739,7 +3820,7 @@
       "source": [
         "print_msg_box('Test accuracy: ' + str(np.round(test_accuracy, 2)) + '%')"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3784,7 +3865,7 @@
         "labs = [l.get_label() for l in lns]\n",
         "ax.legend(lns, labs, loc='upper center', ncol=3, frameon=False, bbox_to_anchor=(0.35, 1.0))"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3831,7 +3912,7 @@
         "    def __repr__(self):\n",
         "        return self.__class__.__name__ + f'mean={self.mean}, std={self.std}'"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3880,7 +3961,7 @@
         "  test_accuracy, _ = calculate_accuracy(model, test_loader, device)\n",
         "  noisy_test_accuracy.append(test_accuracy)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3927,7 +4008,7 @@
         "ax.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
